FIxa så att primary och secondary buttons alignas när de placeras bredvid varandra

--- a/src/assets/partials/_components.button.scss
+++ b/src/assets/partials/_components.button.scss
@@ -22,6 +22,7 @@
   position: relative;
   border-radius: 1px;
   border: 0;
+  box-sizing: border-box;
   color: $text-color--light;
   text-align: center;
   cursor: pointer;
@@ -80,6 +81,8 @@
     border-bottom-right-radius: 1px;
   }
   &.button--secondary {
+    position: relative;
+    top: 1px;
     background-color: $text-color--light;
     @extend .color--primary;
     @extend .border-color--primary;
